--- a/fonts/font.css
+++ b/fonts/font.css
@@ -1,18 +1,18 @@
 @font-face {
-    font-family: Raleway-ExtraBold;
+    font-family: Raleway;
     src:
       url(./Raleway-ExtraBold.woff2) format('woff2'),
       url(./Raleway-ExtraBold.woff) format('woff');
-    font-weight: extrabold;
+    font-weight:800;
     font-display: swap;
   }
   
   @font-face {
-    font-family: Raleway-Regular;
+    font-family: Raleway;
     src:
       url(./Raleway-Regular.woff2) format('woff2'),
       url(./Raleway-Regular.woff) format('woff');
-    font-weight: normal;
+    font-weight: 400;
     font-display: swap;
   }
   
