--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@
 }
 
 .page_title {
-  font-family: Raleway-ExtraBold, Arial, sans-serif;
+  font-family: Raleway, Arial, sans-serif;
   font-size: 116px;
   font-weight: 800;
   line-height: 136.18px;
@@ -28,12 +28,13 @@
   text-transform: uppercase;
   color: black;
   max-width: 739px;
-  max-height: 408px;
+  /* max-height: 408px; */
   text-align: center;
   margin: 0 auto;
   margin-top: 60px;
   z-index: 2;
   position: static;
+  /* margin-bottom: 434px; */
 }
 
 .page_title::after {
@@ -44,7 +45,7 @@
 .page_title:hover::before {
   content: "На самом деле нет.\AВажнее &mdash; научиться ошибаться.";
   white-space: pre;
-  font-family: Raleway-Regular, Arial, sans-serif;
+  font-family: Raleway, Arial, sans-serif;
   font-size: 35px;
   font-weight: 400;
   letter-spacing: normal;
@@ -53,11 +54,11 @@
   color: black;
   text-transform: none;
   max-width: 746px;
-  border: 2px solid black;
+  border: 2px solid currentColor;
   padding: 36px 44px;
   background-color: white;
   border-radius: 20px;
-  box-shadow: 0 16px 0 black;
+  box-shadow: 0 16px 0 currentColor;
   margin-top: 130px;
   margin-right: 20px;
   position: absolute;
